smten/share/lib/Smten/Tests/ShouldFail/FreeTyCon.smtn

module Smten.Tests.ShouldFail.FreeTyCon where

-- The type constructor Blah is not in scope.
bar :: Blah
bar = error "huh?"

